[gd_scene load_steps=2 format=3 uid="uid://j830v0ecgfnx"]

[ext_resource type="Script" path="res://scripts/Audio.gd" id="1_mebkk"]

[node name="Audio" type="Node"]
script = ExtResource("1_mebkk")

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="TimerTimer" type="Timer" parent="."]
wait_time = 1.8
one_shot = true

[node name="MazeTimer" type="Timer" parent="."]
wait_time = 1.2

[connection signal="timeout" from="TimerTimer" to="." method="_on_timer_timer_timeout"]
[connection signal="timeout" from="MazeTimer" to="." method="_on_maze_timer_timeout"]
